--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Phil Jauvin by phil-jauvin</title>
+    <title>Phil Jauvin</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -12,7 +12,6 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Phil Jauvin</h1>
-      <h2 class="project-tagline">I write code and stuff </h2>
     </section>
 
     <section class="main-content">
