--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <body class="index">
 
-    <div class="jumbotron jumbo_back" style="background-color:rgba(85, 102, 102,0.8);min-height:1080px;">
+    <div class="jumbotron jumbo_back" style="background-color:rgba(85, 102, 102,0.8);min-height:100vh;">
 
       <div class="container">
         <div class="row col-sm-8">
@@ -53,7 +53,7 @@
       <div class="container col-sm-offset-1 col-sm-10 presentation" style="background-color:rgba(153, 153, 153,0.8)" id="about">
 
         <div class="row-content">
-          <h1 style="color:floralwhite">I'm a Developer</h1>
+          <h1 style="color:floralwhite">Placeholder</h1>
         </div>
 
       </div>
@@ -62,7 +62,7 @@
       <div class="container col-sm-offset-1 col-sm-10 presentation" style="background-color:rgba(170,204,204,0.8)" id="tools">
 
         <div class="row-content">
-
+          <h1 style="color:floralwhite">Placeholder</h1>
         </div>
 
       </div>
@@ -70,7 +70,7 @@
       <div class="container col-sm-offset-1 col-sm-10 presentation" style="background-color:rgba(204,221,221,0.8)" id="projects">
 
         <div class="row-content">
-
+          <h1 style="color:floralwhite">Placeholder</h1>
         </div>
 
       </div>
