--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <body class="index">
 
-    <div class="jumbotron jumbo_back" style="background-color:rgba(85, 102, 102,0.8);min-height:100vh;">
+    <div class="jumbotron buns" style="min-height:100vh;">
 
       <div class="container">
         <div class="row col-sm-8">
@@ -49,7 +49,7 @@
 
 <!-- <video src="http://giant.gfycat.com/AjarRedHind.webm" width="500px" autoplay loop> -->
 
-
+    <div>
       <div class="container col-sm-offset-1 col-sm-10 presentation" style="background-color:rgba(153, 153, 153,0.8)" id="about">
 
         <div class="row-content">
@@ -62,7 +62,13 @@
       <div class="container col-sm-offset-1 col-sm-10 presentation" style="background-color:rgba(170,204,204,0.8)" id="tools">
 
         <div class="row-content">
-          <h1 style="color:floralwhite">Placeholder</h1>
+          <h1 style="color:floralwhite">Tools</h1>
+        </div>
+
+        <div class="row" align="center">
+          <img src="images/mean_stack_image.svg" style="width:200px;height:200px;margin:40px 60px 40px 60px;"></img>
+          <img src="images/plus.svg" style="width:200px;height:200px;margin:40px 60px 40px 60px;"></img>
+          <img src="images/mean_stack_image.svg" style="width:200px;height:200px;margin:40px 60px 40px 60px;"></img>
         </div>
 
       </div>
@@ -85,6 +91,10 @@
         </div>
 
       </div>
+    </div>
+
+
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
