--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
       <div class="container">
         <div class="row col-sm-8">
-          <h1 style="color:floralwhite">PHIL JAUVIN</h1>
+          <h1 style="color:floralwhite;text-align:left;">PHIL JAUVIN</h1>
         </div>
       </div>
 
@@ -53,7 +53,7 @@
       <div class="container col-sm-offset-1 col-sm-10 presentation" style="background-color:rgba(153, 153, 153,0.8)" id="about">
 
         <div class="row-content">
-          <h1 style="color:floralwhite">Placeholder</h1>
+          <h1 style="color:floralwhite">About me</h1>
         </div>
 
       </div>
@@ -62,11 +62,13 @@
       <div class="container col-sm-offset-1 col-sm-10 presentation" style="background-color:rgba(170,204,204,0.8)" id="tools">
 
         <div class="row-content">
-          <h1 style="color:floralwhite">Tools</h1>
+          <h1>Tools</h1>
         </div>
 
         <div class="row" align="center">
           <img src="images/mean_stack_image.svg" style="width:200px;height:200px;margin:40px 60px 40px 60px;"></img>
+          <img src="images/bootstrap.svg" style="width:200px;height:200px;margin:40px 60px 40px 60px;"></img>
+          <img src="images/jquery.svg" style="width:200px;height:200px;margin:40px 60px 40px 60px;"></img>
         </div>
 
       </div>
@@ -74,7 +76,11 @@
       <div class="container col-sm-offset-1 col-sm-10 presentation" style="background-color:rgba(204,221,221,0.8)" id="projects">
 
         <div class="row-content">
-          <h1 style="color:floralwhite">Placeholder</h1>
+          <h1 style="color:floralwhite">Cool projects</h1>
+        </div>
+
+        <div class="row-content">
+          <h1 style="color:floralwhite">:(</h1>
         </div>
 
       </div>
@@ -92,7 +98,7 @@
     </div>
 
 
-
+    <h1 style="text-align:center;">hello@philjauvin.xyz</h1>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
