--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link href="stylesheets/main.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
 
@@ -27,7 +28,7 @@
 
   <body class="index" onload="thing">
 
-    <div class="jumbotron" style="min-height:100vh;background-color:rgba(85, 102, 102,0.8);">
+    <div class="jumbotron" style="min-height:100vh;background-color:rgb(77, 88, 116);">
 
       <div class="container">
         <div class="row col-sm-8">
@@ -49,7 +50,7 @@
       </div>
 
     <div>
-      <div class="container col-sm-offset-1 col-sm-10 presentation" style="background-color:rgba(153, 153, 153,0.8);text-align:center;" id="about">
+      <div class="container col-sm-offset-1 col-sm-10 presentation" style="background-color:rgb(173, 138, 107);text-align:center;" id="about">
 
         <div class="row-content">
           <h1 style="color:floralwhite">About me</h1>
@@ -57,14 +58,14 @@
 
         <div class="row" align="center">
           <h2 data-sr="wait 0.12s" style="margin:20px 60px 20px 60px;text-align:center;">I'm a Developer based in Ottawa, Canada</h2>
-          <img data-sr="wait 0.12s"  src="images/map.png" style="width:400px;margin:20px 60px 20px 60px;"></img>
+          <img data-sr="wait 0.12s"  src="images/map.png" class="img-responsive" style="max-width:300px;margin:20px 0px 20px 0px;" align="center"></img>
           <h2 data-sr="wait 0.12s" style="margin:20px 60px 40px 60px;text-align:center;">Right now I'm looking for an entry level Web Developer job in my city, but I'm open to remote jobs too</h2>
         </div>
 
       </div>
 
 
-      <div class="container col-sm-offset-1 col-sm-10 presentation" style="background-color:rgba(170,204,204,0.8);text-align:center;" id="tools">
+      <div class="container col-sm-offset-1 col-sm-10 presentation" style="background-color:rgb(173, 138, 107);text-align:center;" id="tools">
 
         <div class="row-content">
           <h1>Tools I use</h1>
@@ -78,7 +79,7 @@
 
       </div>
 
-      <div class="container col-sm-offset-1 col-sm-10 presentation" style="background-color:rgba(204,221,221,0.8);text-align:center;" id="projects">
+      <div class="container col-sm-offset-1 col-sm-10 presentation" style="background-color:rgb(173, 138, 107);text-align:center;" id="projects">
 
         <div class="row-content">
           <h1 style="color:floralwhite">Cool projects</h1>
@@ -91,7 +92,7 @@
       </div>
 
 
-      <div class="container col-sm-offset-1 col-sm-10 presentation" style="margin-bottom:50px;background-color:rgba(170,187,187,0.8);text-align:center;" id="social">
+      <div class="container col-sm-offset-1 col-sm-10 presentation" style="margin-bottom:50px;background-color:rgb(173, 138, 107);text-align:center;" id="social">
 
         <div class="row" align="center" style="margin-top: 2.5%;">
           <i data-sr="wait 0.12s"  class="fa fa-angellist fa-5x" style="font-size:200px;margin:40px 60px 40px 60px;"></i>
