--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
   </head>
 
   <body class="index" onload="thing">
-
-    <div class="jumbotron" style="min-height:100vh;background-color:rgb(77, 88, 116);">
+    <div class="bg-parl">
+    <div class="jumbotron" style="min-height:100vh;background-color:rgba(77, 88, 116,0.8);">
 
       <div class="container">
         <div class="row col-sm-8">
@@ -48,6 +48,7 @@
       </div>
 
       </div>
+    </div>
 
     <div>
       <div class="container col-sm-offset-1 col-sm-10 presentation" style="background-color:rgb(173, 138, 107);text-align:center;" id="about">
