--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
 
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css" integrity="sha384-aUGj/X2zp5rLCbBxumKTCw2Z50WgIr1vs/PFN4praOTvYXWlVyh2UtNUU0KAUhAX" crossorigin="anonymous">
-
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
     <link href="stylesheets/main.css" rel="stylesheet">
@@ -26,9 +23,9 @@
 
   </head>
 
-  <body class="index" onload="thing">
+  <body class="index">
     <div class="bg-parl">
-    <div class="jumbotron" style="min-height:100vh;background-color:rgba(77, 88, 116,0.8);">
+    <div class="jumbotron" style="min-height:100vh;background-color:rgba(153, 136, 119,0.8);">
 
       <div class="container">
         <div class="row col-sm-8">
@@ -51,7 +48,7 @@
     </div>
 
     <div>
-      <div class="container col-sm-offset-1 col-sm-10 presentation" style="background-color:rgb(173, 138, 107);text-align:center;" id="about">
+      <div class="container col-sm-offset-1 col-sm-10 presentation" style="background-color:rgb(204, 187, 153);text-align:center;" id="about">
 
         <div class="row-content">
           <h1 style="color:floralwhite">About me</h1>
@@ -66,7 +63,7 @@
       </div>
 
 
-      <div class="container col-sm-offset-1 col-sm-10 presentation" style="background-color:rgb(173, 138, 107);text-align:center;" id="tools">
+      <div class="container col-sm-offset-1 col-sm-10 presentation" style="background-color:rgb(204, 187, 153);text-align:center;" id="tools">
 
         <div class="row-content">
           <h1>Tools I use</h1>
@@ -80,7 +77,7 @@
 
       </div>
 
-      <div class="container col-sm-offset-1 col-sm-10 presentation" style="background-color:rgb(173, 138, 107);text-align:center;" id="projects">
+      <div class="container col-sm-offset-1 col-sm-10 presentation" style="background-color:rgb(204, 187, 153);text-align:center;" id="projects">
 
         <div class="row-content">
           <h1 style="color:floralwhite">Cool projects</h1>
@@ -93,7 +90,7 @@
       </div>
 
 
-      <div class="container col-sm-offset-1 col-sm-10 presentation" style="margin-bottom:50px;background-color:rgb(173, 138, 107);text-align:center;" id="social">
+      <div class="container col-sm-offset-1 col-sm-10 presentation" style="margin-bottom:50px;background-color:rgb(204, 187, 153);text-align:center;" id="social">
 
         <div class="row" align="center" style="margin-top: 2.5%;">
           <i data-sr="wait 0.12s"  class="fa fa-angellist fa-5x" style="font-size:200px;margin:40px 60px 40px 60px;"></i>
@@ -105,7 +102,7 @@
     </div>
 
 
-    <h1 style="text-align:center;">hello@philjauvin.xyz</h1>
+    <h1 style="text-align:center;color:black;">hello@philjauvin.xyz</h1>
 
     <script src='js/scrollReveal.min.js'></script>
     <script>
