--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   </head>
 
-  <body class="index">
+  <body>
     <div class="bg-parl">
     <div class="jumbotron" style="min-height:100vh;background-color:rgba(153, 136, 119,0.8);">
 
@@ -48,49 +48,49 @@
     </div>
 
     <div>
-      <div class="container col-sm-offset-1 col-sm-10 presentation" style="background-color:rgb(204, 187, 153);text-align:center;" id="about">
+      <div class="container col-sm-offset-1 col-sm-10 presentation" id="about">
 
         <div class="row-content">
-          <h1 style="color:floralwhite">About me</h1>
+          <h1>About me</h1>
         </div>
 
         <div class="row" align="center">
-          <h2 data-sr="wait 0.12s" style="margin:20px 60px 20px 60px;text-align:center;">I'm a Developer based in Ottawa, Canada</h2>
-          <img data-sr="wait 0.12s"  src="images/map.png" class="img-responsive" style="max-width:300px;margin:20px 0px 20px 0px;" align="center"></img>
-          <h2 data-sr="wait 0.12s" style="margin:20px 60px 40px 60px;text-align:center;">Right now I'm looking for an entry level Web Developer job in my city, but I'm open to remote jobs too</h2>
+          <h2 data-sr="wait 0.12s" style="margin:20px 60px 20px 60px;">I'm a Developer based in Ottawa, Canada</h2>
+          <img data-sr="wait 0.12s"  src="images/map.png" class="img-responsive" style="max-width:300px;margin:20px 0px 20px 0px;" align="center">
+          <h2 data-sr="wait 0.12s" style="margin:20px 60px 40px 60px;">Right now I'm looking for an entry level Web Developer job in my city, but I'm open to remote jobs too</h2>
         </div>
 
       </div>
 
 
-      <div class="container col-sm-offset-1 col-sm-10 presentation" style="background-color:rgb(204, 187, 153);text-align:center;" id="tools">
+      <div class="container col-sm-offset-1 col-sm-10 presentation" id="tools">
 
         <div class="row-content">
           <h1>Tools I use</h1>
         </div>
 
         <div class="row" align="center">
-          <img data-sr="wait 0.12s"  src="images/mean_stack_image.svg" style="width:200px;height:200px;margin:40px 60px 40px 60px;"></img>
-          <img data-sr="wait 0.12s"  src="images/bootstrap.svg" style="width:200px;height:200px;margin:40px 60px 40px 60px;"></img>
-          <img data-sr="wait 0.12s"  src="images/jquery.svg" style="width:200px;height:200px;margin:40px 60px 40px 60px;"></img>
+          <img data-sr="wait 0.12s"  src="images/mean_stack_image.svg" style="width:200px;height:200px;margin:40px 60px 40px 60px;">
+          <img data-sr="wait 0.12s"  src="images/bootstrap.svg" style="width:200px;height:200px;margin:40px 60px 40px 60px;">
+          <img data-sr="wait 0.12s"  src="images/jquery.svg" style="width:200px;height:200px;margin:40px 60px 40px 60px;">
         </div>
 
       </div>
 
-      <div class="container col-sm-offset-1 col-sm-10 presentation" style="background-color:rgb(204, 187, 153);text-align:center;" id="projects">
+      <div class="container col-sm-offset-1 col-sm-10 presentation" id="projects">
 
         <div class="row-content">
-          <h1 style="color:floralwhite">Cool projects</h1>
+          <h1>Cool projects</h1>
         </div>
 
         <div class="row-content">
-          <h1 style="color:floralwhite">:(</h1>
+          <h1>:(</h1>
         </div>
 
       </div>
 
 
-      <div class="container col-sm-offset-1 col-sm-10 presentation" style="margin-bottom:50px;background-color:rgb(204, 187, 153);text-align:center;" id="social">
+      <div class="container col-sm-offset-1 col-sm-10 presentation" style="margin-bottom:50px;" id="social">
 
         <div class="row" align="center" style="margin-top: 2.5%;">
           <i data-sr="wait 0.12s"  class="fa fa-angellist fa-5x" style="font-size:200px;margin:40px 60px 40px 60px;"></i>
@@ -100,9 +100,6 @@
 
       </div>
     </div>
-
-
-    <h1 style="text-align:center;color:black;">hello@philjauvin.xyz</h1>
 
     <script src='js/scrollReveal.min.js'></script>
     <script>
