--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
 
         <div class="row" align="center">
-          <img data-sr="wait 0.12s"  src="images/mean_stack_image.svg" style="width:200px;height:200px;margin:40px 60px 40px 60px;">
+          <img data-sr="wait 0.12s"  src="images/mean.svg" style="width:200px;height:200px;margin:40px 60px 40px 60px;">
           <img data-sr="wait 0.12s"  src="images/bootstrap.svg" style="width:200px;height:200px;margin:40px 60px 40px 60px;">
           <img data-sr="wait 0.12s"  src="images/jquery.svg" style="width:200px;height:200px;margin:40px 60px 40px 60px;">
         </div>
@@ -93,9 +93,9 @@
       <div class="container col-sm-offset-1 col-sm-10 presentation" style="margin-bottom:50px;" id="social">
 
         <div class="row" align="center" style="margin-top: 2.5%;">
-          <i data-sr="wait 0.12s"  class="fa fa-angellist fa-5x" style="font-size:200px;margin:40px 60px 40px 60px;"></i>
-          <i data-sr="wait 0.12s"  class="fa fa-github fa-5x" style="font-size:200px;margin:40px 60px 40px 60px;"></i>
-          <i data-sr="wait 0.12s"  class="fa fa-twitter fa-5x" style="font-size:200px;margin:40px 60px 40px 60px;"></i>
+          <a href="https://angel.co/phil-jauvin"><i data-sr="wait 0.12s"  class="fa fa-angellist fa-5x" style="font-size:200px;margin:40px 60px 40px 60px;"></i></a>
+          <a href="https://github.com/phil-jauvin"><i data-sr="wait 0.12s"  class="fa fa-github fa-5x" style="font-size:200px;margin:40px 60px 40px 60px;"></i></a>
+          <a href="https://twitter.com/PhilJauvin"><i data-sr="wait 0.12s"  class="fa fa-twitter fa-5x" style="font-size:200px;margin:40px 60px 40px 60px;"></i></a>
         </div>
 
       </div>
