made it even better !

--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
-
+    <link href="stylesheets/main.css" rel="stylesheet">
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
-    <link href="stylesheets/main.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
@@ -81,10 +80,14 @@
 
         <div class="row-content">
           <h1>Cool projects</h1>
+          <h2>Click the thumbnail to visit the project page</h2>
         </div>
 
-        <div class="row-content">
-          <h1>:(</h1>
+        <div class="row" align="center">
+          <div>
+            <a href="http://159.203.29.155:3000/"><img data-sr="wait 0.12s" class="img-thumbnail thumb-hover" src="images/api-thumb.png" style="width:200px;margin:40px 60px 0px 60px;"></a>
+            <h3>Finance API</h3>
+          </div>
         </div>
 
       </div>
