--- a/portfolio/twitch/index.html
+++ b/portfolio/twitch/index.html
@@ -29,7 +29,7 @@
 
     <div class="container" style="margin-top:50px;">
 
-      <h1 class="page-header">Who's streaming on Twitch ?  <a href=><i class="fa fa-github"></i></a>  <a href="http://www.philjauvin.xyz"><i class="fa fa-user"></i></a> </h1>
+      <h1 class="page-header">Who's streaming on Twitch ?  <a href="https://github.com/phil-jauvin/phil-jauvin.github.io/tree/master/portfolio/twitch"><i class="fa fa-github"></i></a>  <a href="http://www.philjauvin.xyz"><i class="fa fa-user"></i></a> </h1>
       <button id="update-button" class="btn btn-primary" style="margin:10px;width:75px;"><i class="fa fa-refresh fa-2x"></i></button>
 
       <form class="form-inline" id="form">
