Fixed background for tablets - maybe

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </head>
 
   <body>
-    <div class="bg-parl">
+    <div class="bg-parl" style="min-height:100vh;">
     <div class="jumbotron" style="min-height:100vh;background-color:rgba(153, 136, 119,0.8);">
 
       <div class="container">
