--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
     <link href="stylesheets/main.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Kanit' rel='stylesheet' type='text/css'>
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
@@ -64,45 +65,45 @@
     </div>
 
     <div>
-      <div class="container col-sm-offset-1 col-sm-10 presentation" id="about">
+      <div class="container-fluid col-sm-12 presentation" id="about">
 
-        <div class="row-content">
+        <div>
           <h1>About me</h1>
         </div>
 
-        <div class="row" align="center">
-          <h2 data-sr="wait 0.12s" style="margin:20px 60px 20px 60px;">I'm a Developer based in Ottawa, Canada</h2>
-          <img data-sr="wait 0.12s"  src="images/map.png" class="img-responsive" style="max-width:300px;margin:20px 0px 20px 0px;" align="center">
-          <h2 data-sr="wait 0.12s" style="margin:20px 60px 40px 60px;">Right now I'm looking for an entry level Web Developer job in my city, but I'm open to remote jobs too</h2>
+        <div align="center">
+          <h2 style="margin:20px 60px 20px 60px;">I'm a Developer based in Ottawa, Canada</h2>
+          <img src="images/map.png" class="img-responsive" style="max-width:300px;margin:20px 0px 20px 0px;" align="center">
+          <h2 style="margin:20px 60px 40px 60px;">Right now I'm looking for an entry level Web Developer job in my city, but I'm open to remote jobs too</h2>
         </div>
 
       </div>
 
 
-      <div class="container col-sm-offset-1 col-sm-10 presentation" id="tools">
+      <div class="container-fluid col-sm-12 presentation" id="tools" style="background-color:rgb(204, 187, 153)">
 
-        <div class="row-content">
+        <div>
           <h1>Tools I use</h1>
         </div>
 
-        <div class="row" align="center">
-          <img data-sr="wait 0.12s"  src="images/mean.svg" style="width:200px;height:200px;margin:40px 60px 40px 60px;">
-          <img data-sr="wait 0.12s"  src="images/bootstrap.svg" style="width:200px;height:200px;margin:40px 60px 40px 60px;">
-          <img data-sr="wait 0.12s"  src="images/jquery.svg" style="width:200px;height:200px;margin:40px 60px 40px 60px;">
+        <div align="center">
+          <img src="images/mean.svg" style="width:200px;height:200px;margin:40px 60px 40px 60px;">
+          <img src="images/bootstrap.svg" style="width:200px;height:200px;margin:40px 60px 40px 60px;">
+          <img src="images/jquery.svg" style="width:200px;height:200px;margin:40px 60px 40px 60px;">
         </div>
 
       </div>
 
-      <div class="container col-sm-offset-1 col-sm-10 presentation" id="projects">
+      <div class="container-fluid col-sm-12 presentation"  id="projects">
 
-        <div class="row-content">
+        <div>
           <h1>Cool projects</h1>
           <h2>Click the thumbnail to visit the project page</h2>
         </div>
 
-        <div class="row" align="center">
+        <div align="center">
           <div>
-            <a href="http://159.203.29.155:3000/"><img data-sr="wait 0.12s" class="img-thumbnail thumb-hover" src="images/api-thumb.png" style="width:200px;margin:40px 60px 0px 60px;"></a>
+            <a href="http://159.203.29.155:3000/"><img class="img-thumbnail thumb-hover" src="images/api-thumb.png" style="width:200px;margin:40px 60px 0px 60px;"></a>
             <h3>Finance API</h3>
           </div>
         </div>
@@ -110,12 +111,12 @@
       </div>
 
 
-      <div class="container col-sm-offset-1 col-sm-10 presentation" style="margin-bottom:50px;" id="social">
+      <div class="container-fluid col-sm-12 presentation"  style="margin-bottom:50px;background-color:rgb(204, 187, 153);" id="social">
 
-        <div class="row" align="center" style="margin-top: 2.5%;">
-          <a href="https://angel.co/phil-jauvin"><i data-sr="wait 0.12s"  class="fa fa-angellist fa-5x" style="font-size:200px;margin:40px 60px 40px 60px;"></i></a>
-          <a href="https://github.com/phil-jauvin"><i data-sr="wait 0.12s"  class="fa fa-github fa-5x" style="font-size:200px;margin:40px 60px 40px 60px;"></i></a>
-          <a href="https://twitter.com/PhilJauvin"><i data-sr="wait 0.12s"  class="fa fa-twitter fa-5x" style="font-size:200px;margin:40px 60px 40px 60px;"></i></a>
+        <div align="center" style="vertical-align:center;">
+          <a href="https://angel.co/phil-jauvin"><i class="fa fa-angellist fa-5x" style="font-size:200px;margin:40px 60px 40px 60px;"></i></a>
+          <a href="https://github.com/phil-jauvin"><i class="fa fa-github fa-5x" style="font-size:200px;margin:40px 60px 40px 60px;"></i></a>
+          <a href="https://twitter.com/PhilJauvin"><i class="fa fa-twitter fa-5x" style="font-size:200px;margin:40px 60px 40px 60px;"></i></a>
         </div>
 
       </div>
