--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
   </head>
 
   <body>
-    <div class="bg-parl" style="min-height:100vh;">
-    <div class="jumbotron" style="min-height:100vh;background-color:rgba(153, 136, 119,0.8);">
+    <div class="bg-parl">
+    <div class="jumbotron">
 
       <div class="container">
         <div class="row col-sm-8">
-          <h1 style="color:floralwhite;text-align:left;">PHIL JAUVIN</h1>
+          <h1>PHIL JAUVIN</h1>
         </div>
       </div>
 
       <div class="container">
 
-        <div class="row col-sm-4" style="text-align:left;">
+        <div class="row col-sm-4">
           <h2 id="aboutbutton"><a href="#about">About me</a></h2>
           <h2 id="toolbutton"><a href="#tools">Tools I use</a></h2>
           <h2 id="projectbutton"><a href="#projects">Projects</a></h2>
@@ -54,25 +54,28 @@
     </div>
 
     <div>
-      <div class="container-fluid col-sm-12 presentation" id="about">
+      <div class="container-fluid col-sm-12 resume" id="about">
 
-        <div>
-          <h1>About me</h1>
+        <div class="col-sm-12">
+          <div class="col-sm-9">
+            <h2>I'm a Developer who likes to build dynamic websites and web apps.</h2>
+            <h2>Right now I'm looking for an entry level Web Developer (local or remote) </h2>
+          </div>
+
+          <div align="center" class="col-sm-3">
+            <img src="images/map.png" class="img-responsive img-rounded" style="max-width:300px;border:1px solid black;">
+          </div>
         </div>
 
-        <div align="center">
-          <h2 style="margin:20px 60px 20px 60px;">I'm a Developer based in Ottawa, Canada</h2>
-          <img src="images/map.png" class="img-responsive" style="max-width:300px;margin:20px 0px 20px 0px;" align="center">
-          <h2 style="margin:20px 60px 40px 60px;">Right now I'm looking for an entry level Web Developer job in my city, but I'm open to remote jobs too</h2>
-        </div>
+
 
       </div>
 
 
-      <div class="container-fluid col-sm-12 presentation" id="tools" style="background-color:rgb(204, 187, 153)">
+      <div class="container-fluid col-sm-12 resume" id="tools" style="background-color: rgb(106, 115, 137);">
 
         <div>
-          <h1>Tools I use</h1>
+          <h1 style="color:floralwhite;">Tools I use</h1>
         </div>
 
         <div align="center">
@@ -83,7 +86,7 @@
 
       </div>
 
-      <div class="container-fluid col-sm-12 presentation"  id="projects">
+      <div class="container-fluid col-sm-12 resume"  id="projects">
 
         <div>
           <h1>Cool projects</h1>
@@ -100,17 +103,17 @@
       </div>
 
 
-      <div class="container-fluid col-sm-12 presentation"  style="background-color:rgb(204, 187, 153);" id="social">
+      <div class="container-fluid col-sm-12 resume"  style="background-color:rgb(204, 187, 153);" id="social">
 
         <div align="center" style="vertical-align:center;">
-          <a href="https://angel.co/phil-jauvin"><i class="fa fa-angellist fa-5x" style="font-size:200px;margin:40px 60px 40px 60px;"></i></a>
-          <a href="https://github.com/phil-jauvin"><i class="fa fa-github fa-5x" style="font-size:200px;margin:40px 60px 40px 60px;"></i></a>
-          <a href="https://twitter.com/PhilJauvin"><i class="fa fa-twitter fa-5x" style="font-size:200px;margin:40px 60px 40px 60px;"></i></a>
+          <a href="https://angel.co/phil-jauvin"><i class="fa fa-angellist fa-5x"></i></a>
+          <a href="https://github.com/phil-jauvin"><i class="fa fa-github fa-5x"></i></a>
+          <a href="https://twitter.com/PhilJauvin"><i class="fa fa-twitter fa-5x"></i></a>
         </div>
 
       </div>
 
-      <div class="container-fluid col-sm-12 p-footer" style="margin-top:50px;s">
+      <div class="container-fluid col-sm-12 p-footer">
 
         <div align="center" style="vertical-align:center;">
 
