--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
         <div class="col-sm-12">
           <div class="col-sm-9">
-            <h2>I'm a Developer who likes to build dynamic websites and web apps.</h2>
+            <h2>I'm a Developer who likes to build dynamic websites and apps.</h2>
             <h2>Right now I'm looking for an entry level Web Developer (local or remote) </h2>
           </div>
 
