Better tools section

--- a/index.html
+++ b/index.html
@@ -72,16 +72,23 @@
       </div>
 
 
-      <div class="container-fluid col-sm-12 resume" id="tools" style="background-color: rgb(106, 115, 137);">
+      <div class="container-fluid col-sm-12 resume" id="tools" style="background-color: rgb(106, 115, 137);color:floralwhite">
 
-        <div>
-          <h1 style="color:floralwhite;">Tools I use</h1>
+        <div class="container col-sm-12" style="margin-top:20px;">
+
+          <div style="vertical-align:middle;" class="col-sm-6">
+            <h2>
+              My apps mainly use the MEAN stack (MongoDB, Express.Js, Angular.Js, Node.Js)
+            </h2>
+          </div>
+
+          <img class="img-responsive col-sm-6" src="./images/tech_logo.svg" style="vertical-align:middle;">
+
         </div>
 
-        <div align="center">
-          <img src="images/mean.svg" style="width:200px;height:200px;margin:40px 60px 40px 60px;">
-          <img src="images/bootstrap.svg" style="width:200px;height:200px;margin:40px 60px 40px 60px;">
-          <img src="images/jquery.svg" style="width:200px;height:200px;margin:40px 60px 40px 60px;">
+        <div class="col-sm-12">
+          <h2>I'm also familiar with Bootstrap and JQuery</h2>
+          <h2>You should <u><a href="">check out my Resume</a></u></h2>
         </div>
 
       </div>
