--- a/index.html
+++ b/index.html
@@ -123,28 +123,25 @@
 
             <div class="col-sm-12">
 
-              <div class="col-sm-4 col-sm-offset-4">
-                <div class="form-group col-sm-6">
-                  <input type="text" name="name" placeholder="Name" class="contact-form">
+              <div class="col-sm-offset-1 col-sm-10">
+
+                <div class="form-group">
+                  <input class="col-xs-12 contact-form input-lg" type="text" name="name" placeholder="Name">
                 </div>
 
-                <div class="form-group col-sm-6">
-                  <input type="email" name="_replyto" placeholder="Email@example.com" class="contact-form">
+                <div class="form-group">
+                  <input class="col-xs-12 contact-form input-lg" type="email" name="_replyto" placeholder="you@domain.net">
                 </div>
+
+                <div class="form-group">
+                  <textarea class="form-control contact-form input-lg" rows="5" id="message" placeholder="Tell me I'm pretty"></textarea>
+                </div>
+
               </div>
 
             </div>
 
-
-            <div class="col-sm-12">
-
-              <div class="form-group col-sm-offset-1 col-sm-10">
-                <textarea class="form-control contact-form" rows="5" id="message" placeholder="Type a message for me"></textarea>
-              </div>
-
-            </div>
-
-            <button type="submit" class="btn btn-default">Submit</button>
+            <button type="submit" class="btn btn-default btn-lg">Submit</button>
 
           </form>
 
