--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
         <div class="col-sm-12 resume">
           <div class="col-sm-9">
             <h2>I'm a Developer who likes to build dynamic websites and apps.</h2>
-            <h2>Right now I'm looking for an entry level Developer job (local or remote) </h2>
+            <h2>Right now I'm looking for an entry level Developer job (local or remote)</h2>
           </div>
 
-          <div align="center" class="col-sm-3">
-            <img src="images/map.png" class="img-responsive img-rounded" style="max-width:300px;border:1px solid black;">
+          <div style="text-align:centre" class="col-sm-3">
+            <img src="images/map.png" class="img-responsive img-rounded" alt="1738" style="max-width:300px;border:1px solid black;">
           </div>
         </div>
 
@@ -84,7 +84,7 @@
                 </h2>
               </div>
 
-              <img class="img-responsive col-sm-6" src="./images/tech_logo.svg" style="vertical-align:middle;">
+              <img class="img-responsive col-sm-6" src="./images/tech_logo.svg" alt="1738" style="vertical-align:middle;">
 
             </div>
 
@@ -104,9 +104,9 @@
             <h2>Click the thumbnail to visit the project page</h2>
           </div>
 
-          <div align="center">
+          <div style="text-align:centre">
             <div>
-              <a href="http://159.203.29.155:3000/"><img class="img-thumbnail thumb-hover" src="images/api-thumb.png" style="width:200px;margin:40px 60px 0px 60px;"></a>
+              <a href="http://159.203.29.155:3000/"><img class="img-thumbnail thumb-hover" src="images/api-thumb.png" alt="1738" style="width:200px;margin:40px 60px 0px 60px;"></a>
               <h3>Finance API</h3>
             </div>
           </div>
@@ -116,6 +116,8 @@
 
 
       <div class="container-fluid col-sm-12"  style="background-color:rgb(204, 187, 153);" id="contact">
+
+        <h1>Send me a message</h1>
 
         <div class="resume">
 
@@ -134,7 +136,7 @@
                 </div>
 
                 <div class="form-group">
-                  <textarea class="form-control contact-form input-lg" rows="5" id="message" placeholder="Tell me I'm pretty"></textarea>
+                  <textarea class="form-control contact-form input-lg" rows="5" id="message" placeholder="Type a nice message..."></textarea>
                 </div>
 
               </div>
@@ -152,7 +154,7 @@
 
       <div class="container-fluid col-sm-12 p-footer">
 
-        <div align="center" style="vertical-align:center;">
+        <div class="socialmedia">
           <a href="https://angel.co/phil-jauvin"><i class="fa fa-angellist"></i></a>
           <a href="https://github.com/phil-jauvin"><i class="fa fa-github"></i></a>
           <a href="https://twitter.com/PhilJauvin"><i class="fa fa-twitter"></i></a>
